--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,17 +1,21 @@
 @import 'variables.css';
 
 * {
-/*  -webkit-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
+  -moz-osx-font-smoothing: grayscale; 
 }
 
 body {
   margin: 0;
   line-height: 1.5; 
-  font-size: 20px;
-  font-family: Georgia, sans-serif;
+  /*font-size: 20px;*/
+  font-size: 18px;
+  font-family: Georgia, serif;
+  overflow-x: hidden;
+  color: rgb(35, 35, 35);
+  background: rgb(250, 250, 250);
 }
 
 ul, ol {
@@ -22,13 +26,13 @@ ul li {
   list-style: none; }
 
 a {
-  color: #000;
+  color: rgb(35, 35, 35);
   text-decoration: none; 
   transition: all 0.5s ease;
 }
 
 a:hover {
-  color: var(--main-color);
+  /*color: var(--main-color);*/
   border-bottom: 1px solid currentcolor; 
 }
 
@@ -40,13 +44,15 @@ figure {
 }
 
 p{
-  line-height: 1.5; 
-  font-size: 20px;
+  line-height: 1.45; 
+  font-size: 18px;
+  margin-top: 20px;
+  /*font-size: 20px;*/
 }
 
-p a{
+/*p a{
   border-bottom: 1px solid var(--main-color);
-}
+}*/
 
 
 figcaption{
@@ -56,20 +62,33 @@ figcaption{
   line-height: 1.4;
 }
 
+h1{
+  font-family: var(--title-font);
+  font-size: 60px;
+  margin-bottom: 0;
+  margin-top: var(--normal-margin);
+  font-weight: bold;
+  line-height: 1.1;
+  color: rgb(35, 35, 35);
+}
+
 h2, h3{
-  font-family: "Compagnon", sans-serif; 
-  font-weight:normal;
-  font-style:italic;
-  font-size: 35px;
+  font-family: var(--title-font); 
+  font-weight:bold;
+  /*font-size: 35px;*/
+  font-size: 23px;
+  margin-bottom: 0;
 }
 
 h3{
-  font-size: 23px; 
+  font-size: 18px; 
   text-decoration:underline;
+  margin-bottom: 0; 
+  font-weight: normal;  
 }
 
-.compagnon{
-  font-family: "Compagnon", sans-serif; 
+h1 + h2 {
+  margin-top: var(--big-margin);
 }
 
 .show-for-small-only {
@@ -78,37 +97,20 @@ h3{
 .hide-for-small-only {
   display: none; }
 
-main {
-  padding-top: 100px;
+main.row, main {
+  padding: 100px var(--normal-margin) 0px var(--normal-margin);
   width: 100%;
   max-width: 1800px;
-  margin: auto;
+  /*margin: auto;*/
   margin-bottom: 200px; 
+  margin-left:0;
+  margin-right: 0;
 }
 
 main .content figure {
   margin: 32px 0; 
 }
 
-/*main .content h2 {
-  text-align: left;
-  margin-top: 60px;
-  margin-bottom: 0; 
-}
-  main .content h3 {
-    margin-top: 40px;
-    margin-bottom: 20px; }
-  main .content h3 + p {
-    margin-top: 0; }
-  main .content ul {
-    padding-left: 40px; }
-    main .content ul li {
-      list-style: disc; }
-  main .content ol {
-    padding-left: 40px; }
-    main .content ol li {
-      list-style: decimal; 
-}*/
 
 .featured-img-wrapper{
   position:relative;
@@ -133,7 +135,7 @@ main .content figure {
 }
 
 .featured-img.background{
-  background-color: var(--main-color);
+  /*background-color: var(--main-color);*/
   filter: grayscale(0);
   position:absolute;
   top: 0;
@@ -142,19 +144,22 @@ main .content figure {
 }
 
 .content{
-  width: 55%;
+  width: 100%;
   margin:auto;
   position: relative;
 }
 
 .bigimage{
-  width: 182%;
+  width: calc(100% + 40px);
+  /*width: 182%;*/
   position: relative; 
-  left: -41%;
+  left: -20px;
+  /*left: -41%;*/
 }
 
 .bigimage figcaption{
-  margin-left: 22.5%;
+  /*margin-left: 22.5%;*/
+  margin-left: 20px;
 }
 
 .gallery h2{
@@ -173,17 +178,34 @@ main .content figure {
 /*------- H O M E ----------*/
 .introduction{
   margin-bottom: 50px;
+  padding-left: 0;
+  padding-right: var(--big-margin);
+  /*padding: 0;*/
+}
+
+
+.news h2{
+  margin-top: 0;
+  font-size: 18px;
+  margin-bottom: var(--small-margin);
 }
 
 .news .featured-img{
-  height: 350px;
+  height: 250px;
+  margin-bottom: var(--normal-margin);
 }
 
-.news .news-text{
-  padding-left: 2rem;
+.news p{
+  font-size: 15px;
+  margin-top: 0;
+  /*padding-left: 2rem;*/
 }
-.news + .gallery{
-  margin-top: 150px;
+
+
+.news article{
+  padding: 0;
+  margin-bottom: var(--big-margin);
+  /*padding-right: var(--big-margin);*/
 }
 
 /*------- F I N     H O M E ----------*/
@@ -197,7 +219,7 @@ main .content figure {
   }
 
   .footnote a{
-    color: var(--main-color);
+/*    color: var(--main-color);*/
     border:0;
   }
 
@@ -207,59 +229,280 @@ main .content figure {
     margin-bottom: var(--big-margin)
   }
 
+  #footnotes h3{
+    margin-bottom: var(--normal-margin);
+  }
+
   #footnotes li{
     margin-bottom: var(--small-margin);
   }
 
   #footnotes ol{
     padding:0;
-    margin-left: 16px;
+    padding-left: 16px;
   }
 
-  #footnotes .footnotereverse a{
+/*  #footnotes .footnotereverse a{
     color: var(--main-color);
-  }
+  }*/
 
   #footnotes .footnotereverse a:hover{
     border: none;
   }
 
   #related{
-    font-size: 0.8em;
+    font-family: var(--title-font);
+    font-size: 0.7em;
+    margin-top: 60px;
   }
 
   #related h3{
-    font-size: 1.3em;
+    /*font-size: 1.3em;*/
+    margin-bottom: var(--normal-margin);
   }
 
   #related li{
-    margin-bottom: 10px;
+    margin-bottom: var(--normal-margin);
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  #related a:hover{
+   border: none;
+  }
+
+  #related .featured-img-wrapper{
+    margin-bottom: 5px;
+  }
+
+  #related .featured-img{
+    height: 120px;
+    min-height: 50px;
   }
 
   .menu-secondaire{
     position:fixed; 
     bottom: 0;
     right: 0; 
-    font-family: "Compagnon", sans-serif;
-    background: rgba(255,255,255,0.6); 
-    z-index: 10; 
+    z-index: 10;  
   }
-  .menu-secondaire li{
+  .menu-secondaire > ul > label > li{
+    background: rgba(255,255,255,0.6); 
     padding: 10px 43px;
     cursor: pointer; 
     font-size: 15px;
     color: rgba(0,0,0,0.5);
+    border-right:none;
+    border-bottom:none;
   }
 
-  .menu-secondaire li:hover{
-    color: #000; 
+  .menu-secondaire > ul > label > li a:hover{
+    border:none;
   }
+
+  .menu-secondaire > ul > label > li:hover{
+    color: rgb(35,35,35);
+  }
+
+  .menu-secondaire .related-window, .menu-secondaire .footnotes-window{
+    position: absolute; 
+    bottom: 42px; 
+    right: -245px;
+    width: 245px;
+    background: rgba(255,255,255,0.6);
+    padding: var(--small-margin); 
+    max-height: 85vh; 
+    overflow: scroll;
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+  }
+
+  .menu-secondaire .related-window{
+    padding: var(--big-margin); 
+    padding-bottom: 0;
+  }
+
+  .menu-secondaire .related-window .featured-img{
+    min-height: 90px;
+    margin-bottom: 5px;
+  }
+
+  .menu-secondaire .related-window li{
+    margin-bottom: var(--normal-margin);
+    font-family: var(--title-font);
+    font-size: 0.7em;
+  }
+
+  .menu-secondaire .related-window a:hover{
+    border:none;
+  }
+
+  .menu-secondaire .footnotes-window{
+    padding: var(--big-margin); 
+    padding-bottom: 0;
+  }
+
+  .menu-secondaire .footnotes-window #footnotes{
+    margin-top: 0; 
+    margin-bottom:0;
+  }
+
+  .menu-secondaire .footnotes-window h3{
+    display:none;
+  }
+
+  .menu-secondaire .footnotes-window ol li{
+    list-style: inherit;
+  }
+
+
+  #toggle-related:checked ~ .related-window {
+    right: 0;
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+  }
+
+
+  #toggle-related .span-nochecked, #toggle-related .span-checked{
+    cursor:pointer;
+    padding-right: var(--big-margin);
+    margin-bottom: var(--normal-margin);
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+  }
+
+/*  #toggle-related .span-nochecked:hover, #toggle-related .span-checked:hover{
+    color: var(--main-color);
+  }*/
+   
+  #toggle-related + label .span-nochecked { display: block; }
+  #toggle-related + label .span-checked { display: none;}
+
+  #toggle-related:checked + label .span-nochecked { display: none; }
+  #toggle-related:checked + label .span-checked { display: block; color: rgb(35,35,35);}
+
+
+
+  #toggle-footnotes:checked ~ .footnotes-window {
+    right: 0;
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+  }
+
+
+  #toggle-footnotes .span-nochecked, #toggle-footnotes .span-checked{
+    cursor:pointer;
+    padding-right: var(--big-margin);
+    margin-bottom: var(--normal-margin);
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+  }
+
+ /* #toggle-footnotes .span-nochecked:hover, #toggle-footnotes .span-checked:hover{
+    color: var(--main-color);
+  }*/
+   
+  #toggle-footnotes + label .span-nochecked { display: block; }
+  #toggle-footnotes + label .span-checked { display: none;}
+
+  #toggle-footnotes:checked + label .span-nochecked { display: none; }
+  #toggle-footnotes:checked + label .span-checked { display: block; color: rgb(35,35,35)}
+
 
 /* ------- F I N      D E F A U L T ----------*/
 
+/* ------- P R O J E C T S  ----------*/
+
+/*h1 + .gallery{
+  margin-top: var(--big-margin);
+}
+
+.gallery h2{
+ font-weight: normal;
+ margin-top: var(--small-margin);
+ margin-bottom: 0;
+ line-height: 1.2;
+}*/
+
+
+
+.gallery h2{
+  margin-top: 0;
+  font-size: 18px;
+  margin-bottom: var(--small-margin);
+}
+
+.gallery .featured-img{
+  height: 250px;
+  margin-bottom: var(--normal-margin);
+}
+
+.gallery p{
+  font-size: 15px;
+  margin-top: 0;
+  /*padding-left: 2rem;*/
+}
+
+
+.gallery article{
+  margin-bottom: var(--big-margin);
+  padding-right: var(--big-margin);
+}
+
+/* ------- F I N      P R O J E C T S  ----------*/
+
+
 @media only screen and (min-width: 48em) {
+
+  main.row, main {
+    padding: 140px var(--normal-margin) 0px var(--normal-margin);
+  }
+
+  /* home*/
+  .news{
+    margin-top:  var(--big-margin);
+  }
+
+  .news article{
+    margin-bottom: var(--big-margin);
+    padding-right: var(--big-margin);
+  }
+
+  /* default */
+
+  .content h1,  .content h2,  .content h3,  .content p,  .content ul, .content ol, .content figcaption, .content figure:not(.bigimage){
+    width: 55%;
+    max-width: 900px;
+    margin-left:auto;
+    margin-right:auto;
+
+  }
+
+  .content figure:not(.bigimage) figcaption{
+    width: 100%;
+  }
+
+  h2 {font-size: 35px;}
+
+  #related li{
+    padding-right: var(--normal-margin);
+    padding-left: 0;
+  }
+
+  /* projects*/
+  .gallery{
+    margin-top:  var(--big-margin);
+  }
+
+  /*general*/
 
   .show-for-small-only {
     display: none !important; }
   .hide-for-small-only {
-    display: block !important; } }
+    display: block !important; } 
+  }
